@@ -12,4 +12,5 @@ net/if_ppp.h
 net/route.h
 nfs/nfs.h
 siglist.h
+statfsconv.c
 xstatconv.c
